[gd_scene load_steps=67 format=2]

[ext_resource path="res://Src/BossBattle/Cannon.gd" type="Script" id=1]
[ext_resource path="res://Src/BossBattle/EnemyCrab.gd" type="Script" id=2]
[ext_resource path="res://Src/Level/TileGround.tscn" type="PackedScene" id=3]
[ext_resource path="res://Src/BossBattle/ShellSpawner.gd" type="Script" id=4]
[ext_resource path="res://Asset/Art/Boss/Bling_King_Atck.png" type="Texture" id=5]
[ext_resource path="res://Asset/Art/Boss/Bling_King_Hurt.png" type="Texture" id=6]
[ext_resource path="res://Asset/Art/Cannon-sheet.png" type="Texture" id=7]
[ext_resource path="res://Asset/Art/Cannon_Ball.png" type="Texture" id=8]
[ext_resource path="res://Src/Actor/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://Asset/Art/Boss/Bling_King_Walk.png" type="Texture" id=10]
[ext_resource path="res://Asset/Art/Boss/Bling_King_Die.png" type="Texture" id=11]
[ext_resource path="res://Src/Level/TileWall.tscn" type="PackedScene" id=12]
[ext_resource path="res://Src/Level/TileCollision.tscn" type="PackedScene" id=13]
[ext_resource path="res://Src/Level/TileStuff.tscn" type="PackedScene" id=14]
[ext_resource path="res://Src/Main/ClampCamera.gd" type="Script" id=15]
[ext_resource path="res://Asset/Art/Player_Animation/Player_Walk_Side.png" type="Texture" id=16]
[ext_resource path="res://Asset/Art/Player_Animation/Player_Walk_Up.png" type="Texture" id=17]
[ext_resource path="res://Asset/Art/Player_Animation/Player_Walk_D.png" type="Texture" id=18]
[ext_resource path="res://Asset/Sound/BGM/Boss_Music.ogg" type="AudioStream" id=19]
[ext_resource path="res://Src/Main/LevelManager.gd" type="Script" id=20]

[sub_resource type="Animation" id=1]
resource_name = "Idle Down"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 18 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle Side"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 16 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle Up"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 17 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk Down"
length = 1.2
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 18 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walk Side"
length = 1.2
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Walk Up"
length = 1.2
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 17 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 0 ]
}

[sub_resource type="RectangleShape2D" id=52]
extents = Vector2( 16.5, 23.5 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 56, 80 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 7 )
region = Rect2( 56, 0, 56, 80 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 7 )
region = Rect2( 112, 0, 56, 80 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 7 )
region = Rect2( 168, 0, 56, 80 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 7 )
region = Rect2( 224, 0, 56, 80 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 56, 80 )

[sub_resource type="SpriteFrames" id=53]
animations = [ {
"frames": [ SubResource( 29 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 36 ) ],
"loop": false,
"name": "fire",
"speed": 6.0
} ]

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 152, 120 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 10 )
region = Rect2( 152, 0, 152, 120 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 10 )
region = Rect2( 304, 0, 152, 120 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 10 )
region = Rect2( 456, 0, 152, 120 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 152, 120 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 112, 120 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 112, 0, 112, 120 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 224, 0, 112, 120 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 160, 120 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 11 )
region = Rect2( 160, 0, 160, 120 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 11 )
region = Rect2( 480, 0, 160, 120 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 11 )
region = Rect2( 640, 0, 160, 120 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 11 )
region = Rect2( 800, 0, 160, 120 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 11 )
region = Rect2( 960, 0, 160, 120 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 11 )
region = Rect2( 1120, 0, 160, 120 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 11 )
region = Rect2( 1280, 0, 160, 120 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 11 )
region = Rect2( 1440, 0, 160, 120 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 152, 0, 152, 120 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 304, 0, 152, 120 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 456, 0, 152, 120 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 760, 0, 152, 120 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 912, 0, 152, 120 )

[sub_resource type="SpriteFrames" id=59]
animations = [ {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
}, {
"frames": [ SubResource( 54 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": false,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 38 ), SubResource( 39 ), SubResource( 38 ), SubResource( 39 ), SubResource( 38 ), SubResource( 39 ), SubResource( 38 ), SubResource( 39 ), SubResource( 38 ), SubResource( 39 ), SubResource( 38 ), SubResource( 39 ), SubResource( 38 ), SubResource( 39 ), SubResource( 38 ), SubResource( 39 ), SubResource( 38 ), SubResource( 39 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), null ],
"loop": false,
"name": "die",
"speed": 4.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "attack",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=60]
extents = Vector2( 11, 10.5 )

[sub_resource type="CanvasItemMaterial" id=61]
blend_mode = 1

[sub_resource type="Gradient" id=62]
offsets = PoolRealArray( 0, 0.838509, 0.993789, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=49]
gradient = SubResource( 62 )

[sub_resource type="Curve" id=63]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.98913, 0.429545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=51]
curve = SubResource( 63 )

[sub_resource type="ParticlesMaterial" id=64]
flag_disable_z = true
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 70.0
scale_curve = SubResource( 51 )
color_ramp = SubResource( 49 )

[sub_resource type="RectangleShape2D" id=65]
extents = Vector2( 453.5, 19 )

[sub_resource type="RectangleShape2D" id=66]
extents = Vector2( 64, 16.5 )

[node name="Game" type="Node"]
script = ExtResource( 20 )
level_name = "Bling Crap's Hideout"
next_scene = "res://Src/Main/Level7.tscn"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 160, 80 )
current = true
script = ExtResource( 15 )

[node name="TileGround" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( -196607, 1, 0, -196606, 2, 131073, -196605, 1, 2, -131071, 1, 65536, -131070, 2, 131072, -131069, 1, 65538, -65536, 1, 0, -65535, 1, 0, -65534, 1, 65537, -65533, 1, 0, -65532, 1, 1, -65531, 1, 2, 65535, 1, 0, 0, 2, 65537, 1, 2, 131073, 2, 2, 131073, 3, 2, 131073, 4, 2, 65536, 5, 1, 65538, 65536, 1, 65536, 65537, 1, 65537, 65538, 1, 65537, 65539, 1, 65537, 65540, 1, 65537, 65541, 1, 65538, 131072, 1, 65536, 131073, 1, 65537, 131074, 1, 65537, 131075, 1, 65537, 131076, 1, 65537, 131077, 1, 65538, 196608, 1, 131072, 196609, 1, 0, 196610, 1, 65537, 196611, 1, 0, 196612, 1, 131073, 196613, 1, 131074, 262145, 1, 131072, 262146, 1, 131073, 262147, 1, 131074 )

[node name="Level" type="YSort" parent="."]

[node name="Player" parent="Level" instance=ExtResource( 9 )]
position = Vector2( 154, 176 )

[node name="RemoteTransform2D" parent="Level/Player" index="3"]
remote_path = NodePath("../../../Camera2D")

[node name="AnimationPlayer" parent="Level/Player" index="4"]
"anims/Idle Down" = SubResource( 1 )
"anims/Idle Side" = SubResource( 2 )
"anims/Idle Up" = SubResource( 3 )
"anims/Walk Down" = SubResource( 4 )
"anims/Walk Side" = SubResource( 5 )
"anims/Walk Up" = SubResource( 6 )

[node name="Cannon" type="Area2D" parent="Level"]
position = Vector2( 47, 178 )
collision_mask = 64
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Cannon"]
position = Vector2( 1.5, -23.5 )
shape = SubResource( 52 )

[node name="Sprite" type="AnimatedSprite" parent="Level/Cannon"]
frames = SubResource( 53 )
animation = "idle"
centered = false
offset = Vector2( -15, -80 )

[node name="FirePos" type="Position2D" parent="Level/Cannon"]
position = Vector2( 10, -43 )

[node name="Cannon2" type="Area2D" parent="Level"]
position = Vector2( 265, 178 )
scale = Vector2( -1, 1 )
collision_mask = 64
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Cannon2"]
position = Vector2( 1.5, -23.5 )
shape = SubResource( 52 )

[node name="Sprite" type="AnimatedSprite" parent="Level/Cannon2"]
frames = SubResource( 53 )
animation = "idle"
centered = false
offset = Vector2( -15, -80 )

[node name="FirePos" type="Position2D" parent="Level/Cannon2"]
position = Vector2( 10, -43 )

[node name="EnemyCrab" type="Area2D" parent="Level"]
position = Vector2( 156, 53 )
collision_layer = 16
collision_mask = 32
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="Level/EnemyCrab"]
frames = SubResource( 59 )
animation = "walk"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/EnemyCrab"]
position = Vector2( 0, -23.5 )
shape = SubResource( 60 )

[node name="Tween" type="Tween" parent="Level/EnemyCrab"]

[node name="ShootCool" type="Timer" parent="Level/EnemyCrab"]
wait_time = 2.0
autostart = true

[node name="ShootPos" type="Position2D" parent="Level/EnemyCrab"]
position = Vector2( 0, 10 )

[node name="DeathParticle" type="Particles2D" parent="Level/EnemyCrab"]
modulate = Color( 0.85098, 0.431373, 0.054902, 1 )
show_behind_parent = true
material = SubResource( 61 )
emitting = false
lifetime = 0.8
process_material = SubResource( 64 )
texture = ExtResource( 8 )

[node name="DeathParticle2" type="Particles2D" parent="Level/EnemyCrab/DeathParticle"]
modulate = Color( 0.85098, 0.431373, 0.054902, 1 )
show_behind_parent = true
material = SubResource( 61 )
scale = Vector2( -1, 1 )
emitting = false
lifetime = 0.8
process_material = SubResource( 64 )
texture = ExtResource( 8 )

[node name="Wall" type="StaticBody2D" parent="Level/EnemyCrab"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/EnemyCrab/Wall"]
position = Vector2( 0.5, 9 )
shape = SubResource( 65 )

[node name="ShellSpawner" type="Node2D" parent="Level"]
position = Vector2( 159, 110 )
script = ExtResource( 4 )

[node name="TileWall" parent="Level" instance=ExtResource( 12 )]
cell_y_sort = true
tile_data = PoolIntArray( -196607, 0, 3, -196605, 0, 3, -131071, 0, 65539, -131069, 0, 65539, -1, 0, 4, -65536, 0, 196609, -65535, 0, 196615, -65533, 0, 196612, -65532, 0, 196609, -65531, 0, 7, 65535, 0, 65539, 5, 0, 65539, 131071, 0, 65539, 65541, 0, 65539, 196607, 0, 65539, 131077, 0, 65539, 262143, 0, 131076, 196608, 0, 1, 196609, 0, 2, 196611, 0, 0, 196612, 0, 1, 196613, 0, 131079, 327679, 0, 131072, 262144, 0, 131073, 262145, 0, 131074, 262147, 0, 131072, 262148, 0, 131073, 262149, 0, 131074 )

[node name="TileStuff" parent="Level" instance=ExtResource( 14 )]
cell_y_sort = true
tile_data = PoolIntArray( 65537, 7, 0, 131072, 7, 0, 131080, 10, 0, 131081, 7, 0, 196608, 6, 0, 196609, 6, 0, 196616, 10, 0, 196617, 10, 0, 262144, 6, 0, 262153, 7, 0, 327680, 7, 0, 327689, 7, 0 )

[node name="LevelEnd" type="Area2D" parent="."]
position = Vector2( 152, -24 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelEnd"]
position = Vector2( 16, 0.5 )
shape = SubResource( 66 )

[node name="TileCollision" parent="." instance=ExtResource( 13 )]
visible = false
tile_data = PoolIntArray( -458749, 0, 0, -458748, 0, 0, -458747, 0, 0, -458746, 0, 0, -393213, 0, 0, -393210, 0, 0, -327677, 0, 0, -327674, 0, 0, -262141, 0, 0, -262138, 0, 0, -196605, 0, 0, -196602, 0, 0, -131069, 0, 0, -131066, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, 65535, 0, 0, 10, 0, 0, 131071, 0, 0, 65546, 0, 0, 196607, 0, 0, 131082, 0, 0, 262143, 0, 0, 196618, 0, 0, 327679, 0, 0, 262154, 0, 0, 393215, 0, 0, 327690, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 458755, 0, 0, 458758, 0, 0, 524291, 0, 0, 524294, 0, 0, 589827, 0, 0, 589830, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0 )

[node name="BossMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
autoplay = true

[connection signal="area_entered" from="Level/Cannon" to="Level/Cannon" method="_on_area_entered"]
[connection signal="area_exited" from="Level/Cannon" to="Level/Cannon" method="_on_area_exited"]
[connection signal="area_entered" from="Level/Cannon2" to="Level/Cannon2" method="_on_area_entered"]
[connection signal="area_exited" from="Level/Cannon2" to="Level/Cannon2" method="_on_area_exited"]
[connection signal="body_entered" from="Level/EnemyCrab" to="Level/EnemyCrab" method="_on_body_entered"]
[connection signal="animation_finished" from="Level/EnemyCrab/Sprite" to="Level/EnemyCrab" method="_on_animation_finished"]
[connection signal="tween_completed" from="Level/EnemyCrab/Tween" to="Level/EnemyCrab" method="_on_tween_completed"]
[connection signal="timeout" from="Level/EnemyCrab/ShootCool" to="Level/EnemyCrab" method="_on_ShootCool_timeout"]
[connection signal="body_entered" from="LevelEnd" to="." method="_on_LevelEnd_body_entered"]

[editable path="Level/Player"]
